<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentTwo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fragmentsetdatatext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_data"
                android:gravity="center"
                android:layout_marginStart="@dimen/dimens_50dp"
                android:layout_marginEnd="@dimen/dimens_50dp"
                app:layout_constraintBottom_toBottomOf="@id/fragmentTwo"
                />

            <TextView
                android:id="@+id/fragmentTwo"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/this_is_fragment_two"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/Btntwo"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/next_fragment_three"
                android:layout_marginHorizontal="@dimen/dimens_50dp"
                app:layout_constraintTop_toBottomOf="@+id/fragmentTwo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>