<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentFirst">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editBtn"
                android:layout_width="@dimen/dimens_0dp"
                app:helperText="Recipient"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/fragmentOne"
                android:layout_marginStart="@dimen/dimens_50dp"
                android:layout_marginEnd="@dimen/dimens_50dp"
                android:hint="@string/enter_data"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/fragmentOne"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/this_is_fragmentone"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentoneBtn"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/next_fragment_two"
                android:layout_marginHorizontal="@dimen/dimens_50dp"
                app:layout_constraintTop_toBottomOf="@+id/fragmentOne" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>